Change image based on glaze and fixed button spacing of cart dropdown

--- a/Homework_6/styles.css
+++ b/Homework_6/styles.css
@@ -168,7 +168,8 @@ nav a {
 
 #cart-hover {
     width: 227px;
-    height: 150px;
+    /* height: 150px; */
+    overflow: auto;
     border: 1px solid black;
     border-radius: 12px;
     position: absolute;
@@ -206,13 +207,11 @@ nav a {
 .cart-hover-btn {
     width: 80%;
     display: block;
-    margin: 0 auto;
-    /* height: 67px; */
+    margin: 5px auto;
     font-family: 'Josefin Slab', serif;
     font-size: 1em;
     border-radius: 12px;
     padding: 5px;
-    padding-top: 8px;
     background-color: #894E3F;
     color: #ffffff;
     border: 1px solid black;
